Update Composer files.

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "hkwu/uwapi-php",
     "description": "PHP wrapper for the University of Waterloo's Open Data API.",
     "keywords": [
-        "uwaterloo api"
+        "uwaterloo api",
+        "university of waterloo"
     ],
     "homepage": "https://github.com/hkwu/uwapi-php",
     "license": "MIT",
@@ -14,8 +15,7 @@
     ],
     "require": {
         "php": "^5.5",
-        "guzzlehttp/guzzle": "^6.2",
-        "vlucas/phpdotenv": "^2.2"
+        "guzzlehttp/guzzle": "^6.2"
     },
     "autoload": {
         "psr-4": {
