--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
         "php": ">=5.6",
         "guzzlehttp/guzzle": "^6.2"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^5.4"
+    },
     "autoload": {
         "psr-4": {
             "UWaterlooAPI\\": "src/"
