--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,17 @@
         "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.4"
+        "phpunit/phpunit": "^5.4",
+        "vlucas/phpdotenv": "^2.3"
     },
     "autoload": {
         "psr-4": {
             "UWaterlooAPI\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
         }
     }
 }
