--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     ],
     "require": {
         "php": ">=5.6",
-        "guzzlehttp/guzzle": "^6.2"
+        "guzzlehttp/guzzle": "^6.2",
+        "nicmart/string-template": "^0.1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.4",
