--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,15 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
+        "php": ">=7.0.0",
         "guzzlehttp/guzzle": "^6.2",
-        "nicmart/string-template": "^0.1.0"
+        "nicmart/string-template": "^0.1.0",
+        "symfony/options-resolver": "^3.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.4",
-        "vlucas/phpdotenv": "^2.3"
+        "vlucas/phpdotenv": "^2.3",
+        "fzaninotto/faker": "^1.6"
     },
     "autoload": {
         "psr-4": {
